<resources>
    <string name="cesu">&appname;</string>
    <string name="appnametitle">&appname;</string>
    <string name="footer_note">Copyright © Reserved-IT Department, &appname;, Bhubaneswar, Odisha</string>
    <string name="contact_us">Contact &appname; IT CENTER</string>
    <string name="app_name">TPCODL MITRA</string>
    <string name="title_activity_password_new">PasswordNewActivity</string>
    <string name="title_activity_current_bill">CurrentBillActivity</string>
    <string name="title_activity_history_bill">HistoryBillActivity</string>
    <string name="bottomcontctus">Contact Us</string>
    <string name="bottomfb">Facebook</string>
    <string name="bottomtwiter">Twitter</string>
    <string name="bottomqrscan">QR Scan</string>
    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_with_request_code">Scan Barcode with customized request code</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="title_activity_tabbed_scanning">Tabbed Scanning</string>
    <string name="tabs">Tabs</string>
    <string name="about">About</string>
    <string name="title_activity_simple_scanner">SimpleScannerActivity</string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_settings">View Bill History</string>
    <string name="action_settings1">Logout</string>
    <string name="action_settings2">Cancel</string>
    <string name="consumption">Consumption </string>
    <string name="PmtBill">Payment-Bill History</string>
    <string name="PmtHistory">Payment History</string>
    <string name="BlHistory">Bill History</string>
    <string name="termsAndConditions">1.0 You accept the Terms by using or browsing the Application. You may also accept the Terms by clicking to accept or agree to the Terms where this option is made available to you by &appname;
        in this user interface. If you do not agree to all these Terms, then you may not access the application or use any services. \n\n2.0 &appname;
        reserves the right to review, change and update any of the Terms at any time at its sole discretion. Any new features or tools which are added to the Application will also be subject to these Terms. Your continued use of or access to the Service following the posting of any changes to these Terms of Service constitutes acceptance of those changes.\n\n3.0 Unless otherwise indicated, the Intellectual Property Rights in the Application, the content and any other Intellectual Property arising out of your use of the Application, are the exclusive property of &appname;.\n\n4.0 &appname;
        will not be liable for any consequential loss or damage by using this app.\n\n5.0 &appname;
        may terminate your account at any time. </string>
    <string name="tnc_label">&lt;u&gt;Agree to Terms &amp; Conditions&lt;/u&gt;</string>
    <string name="error_title">Error</string>
    <string name="ca_not_found">Invalid Consumer Number</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="temo"></string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pay_now">Pay Now</string>
    <string name="choose_ca_con_number">Choose CA/Con. Number</string>
    <string name="bill_month">Bill Month:</string>
    <string name="payable_amount">Payable Amount:</string>
    <string name="due_date">Due Date:</string>
    <string name="outage">POWER CUT DETAILS</string>
    <string name="outage_history_outage_details">Outage History | Outage details</string>
    <string name="safety">SAFETY</string>
    <string name="report_safety_incident">Report safety incident</string>
    <string name="my_account">My Account</string>
    <string name="register_profile_edit_login">Register | Profile Edit | Login</string>
    <string name="register_complaint">REGISTER COMPLAINT</string>
    <string name="register_complaint_view_complaint_status">Register complaint | View complaint status</string>
    <string name="theft">THEFT</string>
    <string name="register_theft_action_taken">Report theft get rewards</string>
    <string name="verify_employee">Verify Employee</string>
    <string name="using_emp_code">Using Employee Code</string>
    <string name="offer_amp_scheme">Offer &amp; Scheme</string>
    <string name="current_offer_amp_scheme"><![CDATA[Current offer & Scheme]]></string>
    <string name="about_us">About us</string>
    <string name="know_about_us">Know about us</string>
    <string name="nearest_offices">LIST OF OFFICES</string>
    <string name="nearest_office_center">TPCODL Offices</string>
    <string name="energy_calculation">Energy Calculation</string>
    <string name="calculate_energyr">Calculate energy</string>
    <string name="feedback">FEEDBACK</string>
    <string name="technical_feedback">Technical feedback</string>
    <string name="please_enter_ca_number">Please enter CA/Consumer number</string>
    <string name="agree_terms_amp_conditions"><![CDATA[Agree Terms & Conditions]]></string>
    <string name="view_details">View Details</string>
    <string name="customer_id">Customer ID:</string>
    <string name="enter_customer_id">Enter Customer ID</string>
    <string name="description">Description of incident:</string>
    <string name="enter_description">Please enter description of incident</string>
    <string name="address">Address of incident:</string>
    <string name="enter_address">Please enter address of incident</string>
    <string name="landmark">Landmark:</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="section">Incident area name:</string>
    <string name="enter_section">Enter incident area name</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="remarks">Remarks:</string>
    <string name="attach_file">Attach File:</string>
    <string name="image_size_should_not_be_greater_than_2_mb">Image size should not be greater than 2 Mb</string>
    <string name="submit">Submit</string>
    <string name="register">REGISTER</string>
    <string name="please_provide_details_to_register">(Please provide details to register)</string>
    <string name="enter_consumer_number">Enter 12 digit consumer/CA number</string>
    <string name="enter_phoner_number">Please enter phone number</string>
    <string name="sms_communication_sent_to_this_number">* SMS communication sent to this number</string>
    <string name="enter_email_id">Enter email ID</string>
    <string name="agree_term_amp_conditions"><![CDATA[Agree Term & Conditions]]></string>
    <string name="know_more">Know More</string>
    <string name="exit">EXIT</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_password">Remember password</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="payment">PAYMENT</string>
    <string name="please_provide_details_to_proceed">(Please provide details to proceed)</string>
    <string name="agree_to_terms_amp_conditions"><![CDATA[Agree to Terms & Conditions]]></string>
    <string name="accept_term_con">Please accept terms and conditions </string>
    <string name="bill_details">BILL DETAILS</string>
    <string name="payment_due">Payment Due:</string>
    <string name="current_bill">Current Bill:</string>
    <string name="arrear">Arrear:</string>
    <string name="bill_date_bill">Bill Date:</string>
    <string name="rebate">Rebate:</string>
    <string name="pmt_recvd">Pmt Recvd:</string>
    <string name="last_pmt_recvd">Last Pmt Recvd:</string>
    <string name="min_amt_to_pay">Min. Amt to Pay:</string>
    <string name="consumer_id">Consumer Id:</string>
    <string name="name">Name:</string>
    <string name="add_consumer">Add Consumer</string>
    <string name="_12_digit_consumer_id">12 Digit consumer ID</string>
    <string name="select_consumer_id">Select Consumer ID</string>
    <string name="enter_name">Enter Name</string>
    <string name="complain_details">Complain Details</string>
    <string name="back">Back</string>
    <string name="complaint">Complaint</string>
    <string name="register_thefts">Register Thefts</string>
    <string name="register_complain">Register Complaint</string>
    <string name="view_status">View Status</string>
    <string name="user_name">User Name</string>
    <string name="select_consumer_no">Select Consumer No</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_registered_mobile_no">Enter Registered Mobile No</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="remember_password_for_login">Remember Password for Login</string>
    <string name="recover">Recover</string>
    <string name="reset">Reset</string>
    <string name="please_provide_details_to_add_safety_incidents">(Please provide details to add safety incidents)</string>
</resources>