<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/consumption"
        android:orderInCategory="100"
        android:title="@string/consumption"
        app:showAsAction="never" />
    <item
        android:id="@+id/PmtBill"
        android:orderInCategory="100"
        android:title="@string/PmtBill"
        app:showAsAction="never" />
    <item
        android:id="@+id/PmtHistory"
        android:orderInCategory="100"
        android:title="@string/PmtHistory"
        app:showAsAction="never" />
    <item
        android:id="@+id/BlHistory"
        android:orderInCategory="100"
        android:title="@string/BlHistory"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="Back"
        app:showAsAction="ifRoom" />
</menu>