<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:orientation="vertical"

    android:gravity="top">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forgot_password"
            android:id="@+id/textView"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="#821122" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/customborder"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:id="@+id/consid11">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/mob1"
                android:background="@drawable/phone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mob"
                android:layout_weight="1"
                android:textSize="17dp"
                android:maxLength="10"
                android:hint="@string/enter_registered_mobile_no" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:id="@+id/consid">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/pwd1"
                android:background="@drawable/repassword" />




            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pwd"
                android:layout_weight="1"
                android:textSize="17dp"
                android:maxLength="12"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textIsSelectable="true" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/rpwd1"
                android:background="@drawable/repassword" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/rpwd"
                android:layout_weight="1"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/remember_password_for_login"
                android:id="@+id/cf"
                android:textSize="12dp"
                android:textColor="#070000" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/recover"
                android:id="@+id/savepwd"
                android:background="@drawable/butn" />

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/reset"
                android:id="@+id/recover"
                android:background="@drawable/butn" />
        </TableRow>

    </LinearLayout>


</LinearLayout>

