<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.cesu.itcc05.consumeportal.SafetyActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_backs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintTop_toTopOf="@+id/ll_back"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/iv_backs"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:background="@drawable/logo_new"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >



    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safety"
        app:layout_constraintTop_toBottomOf="@+id/ll_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tv_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_details_to_add_safety_incidents"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:textStyle="italic"
        android:textColor="@color/colorVerify"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_id"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/et_customer_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_customer_id"
                    android:visibility="gone"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_description"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_address"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:paddingEnd="5dp"
                    android:imeOptions="actionNext"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/landmark"
                    android:layout_marginTop="8dp"
                     android:visibility="gone"

                    />
                <EditText
                    android:id="@+id/et_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_landmark"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:imeOptions="actionNext"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    />

                <AutoCompleteTextView
                    android:id="@+id/et_pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text=""
                    android:inputType="text"
                    android:layout_marginTop="5dp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/enter_section"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                     />

             <!--   <EditText
                    android:id="@+id/et_pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="Enter Section"
                    android:visibility="gone"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    />-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"

                    />
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_mobile"
                    android:inputType="phone"
                    android:paddingEnd="5dp"
                    android:imeOptions="actionNext"
                    android:paddingStart="10dp"
                    android:maxLength="10"
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/et_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/rectangular_shape"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_description"
                    android:gravity="start|top"
                    android:paddingEnd="5dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:paddingTop="5dp"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attach_file"
                    android:layout_marginTop="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                   <ImageView
                       android:id="@+id/iv_camera"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/rectangular_shape"
                       android:src="@drawable/camera"
                       android:padding="10dp"
                       />
                    <ImageView
                        android:id="@+id/iv_gallaery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/rectangular_shape"
                        android:src="@drawable/clip"
                        android:padding="10dp"

                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/ll_iv_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:src="@drawable/document"
                            android:padding="10dp"
                            />
                        <TextView
                            android:id="@+id/image_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:singleLine="true"
                            app:layout_constraintTop_toTopOf="@+id/iv_selected"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_selected"
                            app:layout_constraintStart_toEndOf="@+id/iv_selected"
                            android:textColor="@color/black"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>




                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/image_size_should_not_be_greater_than_2_mb"
                    android:textColor="@color/scanviewfinder_laser"
                    />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangular_shape_primary"
                    android:textColor="#ffffff"
                    android:text="@string/submit"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>